# auth_service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: auth_service_CI.yml
auth_service/: main.py
auth_service/core/: config.py  database.py  security.py
auth_service/handlers/: __init__.py  google_social_handler.py  token_handler.py
auth_service/models/: auth_model.py
auth_service/routers/: __init__.py  auth.py  auth_router.py
auth_service/schemas/: __init__.py  auth_schemas.py
tests/: __init__.py  test_auth_handler.py  test_auth_router.py  test_token_handler.py
