[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Auth service for The Tree Project"
authors = ["SigningOwl <whddms1208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
authlib = "^1.4.1"
pytest = "^8.3.4"
python-jose = "^3.3.0"
httpx = "^0.28.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
